fix alignment issue with icons on inventory page

--- a/src/components/InventoryList/InventoryList.scss
+++ b/src/components/InventoryList/InventoryList.scss
@@ -291,6 +291,8 @@
 
   &__item-edit {
     cursor: pointer;
+    display: flex;
+    align-items: center;
   }
 
   &__item-delete {
